# Howard-Special-2

./: .gitignore  CMakeLists.txt  README.md  To dodo list.txt
lib/: index.html - Shortcut.lnk
lib/html/: _box_collider_8h_source.html  _camera_8h_source.html  _component_8h_source.html  _core_8h_source.html  _depth_cubemap_8h_source.html  _exception_8h_source.html  _game_object_8h_source.html  _howard_special2_8h_source.html  _keyboard_8h_source.html  _light_8h_source.html  _mesh_8h_source.html  _mesh_collider_8h_source.html  _non_copyable_8h_source.html  _render_texture_8h_source.html  _renderer_8h_source.html  _resource_8h_source.html  _resources_8h_source.html  _rigidbody_8h_source.html  _shader_program_8h_source.html  _sound_8h_source.html  _sound_source_8h_source.html  _text_renderer_8h_source.html  _texture_8h_source.html  _transform_8h_source.html  _tri_box_overlap_8h_source.html  _tri_tri_overlap_8h_source.html  _vertex_buffer_8h_source.html  aa_8h_source.html  annotated.html  annotated_dup.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_db6c7779cede9b4f4832239f5aec6d7f.html  dir_db6c7779cede9b4f4832239f5aec6d7f.js  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  (+121 more)
lib/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  (+29 more)
lib/latex/: annotated.tex  hierarchy.tex  refman.tex  struct_box_collider.eps  struct_box_collider.tex  struct_c_r_cscan.tex  struct_camera.tex  struct_codebook.tex  struct_component.eps  struct_component.tex  struct_core.eps  struct_core.tex  struct_depth_cubemap.eps  struct_depth_cubemap.tex  struct_directional_light.eps  struct_directional_light.tex  struct_exception.eps  struct_exception.tex  struct_floor0.tex  struct_floor1.tex  struct_game_object.tex  struct_keyboard.eps  struct_keyboard.tex  struct_mapping.tex  struct_mapping_channel.tex  struct_mesh.eps  struct_mesh.tex  struct_mesh_collider.eps  struct_mesh_collider.tex  struct_mode.tex  struct_non_copyable.eps  struct_non_copyable.tex  struct_point_light.eps  struct_point_light.tex  struct_probed_page.tex  struct_render_texture.eps  struct_render_texture.tex  struct_renderer.eps  struct_renderer.tex  struct_residue.tex  (+27 more)
shaders/: default.frag  inverse.frag  inverse.vert  light.frag  light.vert  rendtex.frag  rendtex.vert  shadow_mapper - Copy.frag  shadow_mapper.frag  shadow_mapper.vert  shadowing.frag  shadowing.vert  shadowing2.frag  shadows.vert  simple.frag  simple.vert  skybox.frag  skybox.vert  spriteshader.frag  spriteshader.vert  text.frag  text.vert
src/HowardSpecial2/: BoxCollider.cpp  BoxCollider.h  Camera.cpp  Camera.h  Component.cpp  Component.h  Core.cpp  Core.h  Cubemap.cpp  Cubemap.h  DepthCubemap.cpp  DepthCubemap.h  Exception.cpp  Exception.h  GameObject.cpp  GameObject.h  HowardSpecial2.h  Keyboard.cpp  Keyboard.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshCollider.cpp  MeshCollider.h  NonCopyable.h  RenderTexture.cpp  RenderTexture.h  Renderer.cpp  Renderer.h  Resource.h  Resources.h  Rigidbody.cpp  Rigidbody.h  ShaderProgram.cpp  ShaderProgram.h  Sound.cpp  Sound.h  (+19 more)
src/game/: TriangleRenderer.cpp  TriangleRenderer.h  main.cpp  playerController.cpp  playerController.h
src/game/models/: campsite2.mb  castle2.mtl
