cmake_minimum_required(VERSION 2.6)
project(HOWARDSPECIAL2)

include_directories(src)

add_library(HowardSpecial2
	src/HowardSpecial2/GameObject.h
	src/HowardSpecial2/GameObject.cpp
	src/HowardSpecial2/Core.cpp
	src/HowardSpecial2/Core.h
	src/HowardSpecial2/Component.cpp
	src/HowardSpecial2/Component.h
	src/HowardSpecial2/ShaderProgram.cpp
	src/HowardSpecial2/ShaderProgram.h
	src/HowardSpecial2/Mesh.cpp
	src/HowardSpecial2/Mesh.h
	src/HowardSpecial2/VertexBuffer.cpp
	src/HowardSpecial2/VertexBuffer.h
	src/HowardSpecial2/HowardSpecial2.h
	src/HowardSpecial2/Texture.h
	src/HowardSpecial2/Texture.cpp
	src/HowardSpecial2/stb_image.h
	src/HowardSpecial2/stb_image.cpp
	src/HowardSpecial2/Transform.cpp
	src/HowardSpecial2/Transform.h
	src/HowardSpecial2/Renderer.cpp
	src/HowardSpecial2/Renderer.h
	src/HowardSpecial2/Camera.h
	src/HowardSpecial2/Camera.cpp
	src/HowardSpecial2/stb_vorbis.h
	src/HowardSpecial2/SoundSource.h
	src/HowardSpecial2/SoundSource.cpp
	src/HowardSpecial2/Sound.cpp
	src/HowardSpecial2/Sound.h
	src/HowardSpecial2/Resource.h
	src/HowardSpecial2/NonCopyable.h
	src/HowardSpecial2/Resources.h
	src/HowardSpecial2/Resources.cpp
	src/HowardSpecial2/RenderTexture.h
	src/HowardSpecial2/RenderTexture.cpp
	src/HowardSpecial2/Light.cpp
	src/HowardSpecial2/Light.h
	src/HowardSpecial2/DepthCubemap.h
	src/HowardSpecial2/DepthCubemap.cpp
	src/HowardSpecial2/Keyboard.h
	src/HowardSpecial2/Keyboard.cpp
	src/HowardSpecial2/TriBoxOverlap.h
	src/HowardSpecial2/TriTriOverlap.h
	src/HowardSpecial2/BoxCollider.h
	src/HowardSpecial2/BoxCollider.cpp
	src/HowardSpecial2/Exception.h
	src/HowardSpecial2/Exception.cpp
	src/HowardSpecial2/MeshCollider.h
	src/HowardSpecial2/MeshCollider.cpp
	src/HowardSpecial2/TextRenderer.h
	src/HowardSpecial2/TextRenderer.cpp
	src/HowardSpecial2/Rigidbody.h
	src/HowardSpecial2/Rigidbody.cpp
	src/HowardSpecial2/Material.h
	src/HowardSpecial2/Material.cpp
	src/HowardSpecial2/Cubemap.h
	src/HowardSpecial2/Cubemap.cpp
)
target_link_libraries(HowardSpecial2 SDL2 opengl32 openal32 glew32)

add_executable(game
	src/game/main.cpp
	src/game/playerController.h
	src/game/playerController.cpp
)
target_link_libraries(game HowardSpecial2)